include_directories(BEFORE "../vm")
include_directories("../inc")
include_directories(BEFORE "../vm/${ARCH_SOURCES_DIR}")
include_directories("../debug/inc")
include_directories("../debug/inc/dump")

if(CLR_CMAKE_PLATFORM_ARCH_AMD64)
  add_definitions(-DDBG_TARGET_64BIT=1)
  add_definitions(-DDBG_TARGET_AMD64=1)
  add_definitions(-DDBG_TARGET_WIN64=1)
elseif(CLR_CMAKE_PLATFORM_ARCH_I386)
  add_definitions(-DDBG_TARGET_32BIT=1)
  add_definitions(-DDBG_TARGET_X86=1)
elseif(CLR_CMAKE_PLATFORM_ARCH_ARM)
  add_definitions(-DDBG_TARGET_32BIT=1)
  add_definitions(-DDBG_TARGET_ARM=1)
elseif(CLR_CMAKE_PLATFORM_ARCH_ARM64)
  add_definitions(-DDBG_TARGET_64BIT=1)
  add_definitions(-DDBG_TARGET_ARM64=1)
  add_definitions(-DDBG_TARGET_WIN64=1)
else()
  clr_unknown_arch()
endif()

add_subdirectory(bcltype)
add_subdirectory(float)

if(WIN32)
  add_subdirectory(nls)
  add_subdirectory(cryptography)
endif(WIN32)
